Styles for about-us and in-the-news

--- a/sites/all/themes/rebound/sass/_footer.scss
+++ b/sites/all/themes/rebound/sass/_footer.scss
@@ -3,6 +3,7 @@
     @extend .fixed-width;
     background: $blue-dark;
     overflow: hidden;
+    clear: both;
     
     & > div > div > div
     {
