--- a/sites/all/themes/rebound/sass/_variables.scss
+++ b/sites/all/themes/rebound/sass/_variables.scss
@@ -1,5 +1,6 @@
 $blue-medium:#1b75bc;
 $blue-light:#29abe2;
 $blue-dark:#24408e;
+$blue-navy:#222f7e;
 $blue-very-light:#5fbee8;
 $blue-very-very-light:#ddeaf5;
