--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -1,4 +1,81 @@
-.view-about-us
+.view-about-us,
+body > .view-about-us-row
+{
+    .view-content
+    {
+        height: 850px;
+    }
+    
+    .views-row,
+    &.view-about-us-row
+    {
+        background: $blue-medium;
+        color: white;
+        border: 10px solid $blue-medium;
+        border-radius: 135px;
+        float: left;
+        cursor: pointer;
+        width: auto !important;
+        
+        & > div
+        {
+            width: 230px;
+            height: 230px;
+            border: 10px solid white;
+            border-radius: 125px;
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+        
+        &:hover
+        {
+            .views-field-title
+            {
+                display: none;
+            }
+            
+            .views-field-body-1
+            {
+                display: block;
+            }
+        }
+    }
+    
+    .views-field-body
+    {
+        display: none;
+    }
+    .views-field-body-1
+    {
+        display: none;
+        padding: 30px;
+        line-height: 85%;
+        font-weight: bold;
+        font-size: 0.9em;
+        
+        .read-more
+        {
+            color: white;
+            display: block;
+            margin-top: 1em;
+            text-decoration: none;
+        }
+    }
+    .views-field-title
+    {
+        text-align: center;
+        font-size: 2.5em;
+        font-weight: bold;
+        border-bottom: 4px solid white;
+        display: inline-block;
+        line-height: 85%;
+        max-width: 180px;
+        padding-bottom: 3px;
+    }
+}
+
+.view-programs
 {
     .view-content
     {
@@ -32,7 +109,7 @@
                 display: none;
             }
             
-            .views-field-body-1
+            .views-field-body
             {
                 display: block;
             }
@@ -40,10 +117,6 @@
     }
     
     .views-field-body
-    {
-        display: none;
-    }
-    .views-field-body-1
     {
         display: none;
         padding: 30px;
@@ -253,5 +326,386 @@
         padding-left: 0;
         display: block;
         text-align: center;
+    }
+}
+
+.view-photo-galleries
+{
+    .views-row
+    {
+        position: relative;
+        float: left;
+        
+        &:hover
+        {
+            .views-field-title
+            {
+                display: none;
+            }
+        }
+    }
+    
+    .views-field-field-photos
+    {
+        img
+        {
+            display: block;
+            border-radius: 135px;
+            border: 10px solid $blue-medium;
+        }
+    }
+    
+    .views-field-title
+    {
+        position: absolute;
+        left: 20px;
+        top: 20px;
+        right: 20px;
+        bottom: 20px;
+        background: $blue-medium;
+        border-radius: 125px;
+        font-weight: bold;
+        font-size: 2em;
+        line-height: 100%;
+        text-align: center;
+        
+        & > div
+        {
+            display: table-cell;
+            vertical-align: middle;
+            width: 215px;
+            height: 215px;
+            padding: 15px;
+            
+            div
+            {
+                border-bottom: 3px solid white;
+            }
+        }
+    }
+}
+
+.view-primary-circles,
+.view-red-circles
+{
+    position: relative;
+    
+    .views-row
+    {
+        width: 300px;
+        height: 300px;
+        position: absolute;
+        z-index: 2;
+        border-radius: 150px;
+        overflow: hidden;
+    }
+    
+    .views-field-field-image img
+    {
+        border-radius: 150px;
+    }
+    
+    .views-field-field-link
+    {
+        opacity: 0;
+        transition: opacity 0.3s;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        border: 10px solid $blue-medium;
+        border-radius: 150px;
+        text-align: center;
+        
+        & > div
+        {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            right: 10px;
+            bottom: 10px;
+            background: $blue-medium;
+            border-radius: 130px;
+        }
+        
+        a
+        {
+            display: block;
+            position: absolute;
+            left: -20px;
+            top: -20px;
+            right: -20px;
+            bottom: -20px;
+            padding: 50px;
+            border-radius: 150px;
+            text-decoration: none;
+            color: white;
+            
+            & > div
+            {
+                height: 200px;
+                width: 200px;
+                display: table-cell;
+                vertical-align: middle;
+            }
+        }
+    }
+    
+    .views-field-field-link:hover,
+    .views-row.active .views-field-field-link 
+    {
+        opacity: 1;
+    }
+    
+    .views-field-title
+    {
+        font-size: 2.5em;
+        text-decoration: underline;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+    }
+    .views-field-field-subtitle
+    {
+        display: inline-block;
+        padding-right: 20px;
+        background: url(../img/chevron-right.png) no-repeat right center;
+    }
+}
+
+.view-red-circles
+{
+    .views-row
+    {
+        width: 250px;
+        height: 250px;
+    }
+    
+    .views-field-field-link
+    {
+        border-color: #ed1c24;
+        
+        & > div
+        {
+            background: #ed1c24;
+        }
+        
+        a
+        {
+            padding: 30px;
+            
+            & > div
+            {
+                width: 190px;
+                height: 190px;
+            }
+        }
+    }
+    
+    .views-field-title
+    {
+        font-size: 2.25em;
+    }
+}
+
+.view-secondary-circles
+{
+    .views-row
+    {
+        position: absolute;
+        padding: 40px 0;
+        width: 100%;
+        left: 0;
+        
+        & > div
+        {
+            width: 100%;
+            max-width: 940px;
+            margin: 0 auto;
+        }
+        
+        &:hover,
+        &.active
+        {
+            .views-field-nothing
+            {
+                opacity: 1;
+                left: 0;
+            }
+            .views-field-nothing-1 .grower
+            {
+                width: 4000px;
+                height: 4000px;
+                margin-top: -2000px;
+                left: -2000px;
+                right: auto;
+            }
+        }
+    }
+    
+    .views-field-field-image img
+    {
+        float: left;
+        display: block;
+        border-radius: 125px;
+        position: relative;
+        z-index: 3;
+        margin: 0 50px 0 0;
+    }
+    &.view-display-id-block
+    {
+        .views-row:hover,
+        .views-row.active
+        {
+            .views-field-nothing
+            {
+                opacity: 1;
+                left: 0;
+            }
+            .views-field-nothing-1 .grower
+            {
+                width: 4000px;
+                height: 4000px;
+                margin-top: -2000px;
+                right: -2000px;
+                left: auto;
+            }
+        }
+        
+        .views-field-field-image img
+        {
+            float: right;
+            margin: 0 0 0 50px;
+        }
+        .views-field-nothing
+        {
+            left: 50px;
+            
+            &::after
+            {
+                left: auto;
+                right: 242px;
+                border-width: 58px 0 58px 58px;
+                border-color: transparent transparent transparent $blue-navy;
+            }
+        }
+        
+        .views-field-nothing-1 .grower
+        {
+            left: auto;
+            right: 125px;
+        }
+    }
+    
+    .views-field-nothing
+    {
+        opacity: 0;
+        position: relative;
+        left: -50px;
+        z-index: 2;
+        transition: opacity 0.3s, left 0.5s;
+        
+        &::after
+        {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 242px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 58px 58px 58px 0;
+            border-color: transparent $blue-navy transparent transparent;
+            z-index: 1;
+        }
+        
+        & > div
+        {
+            overflow: hidden;
+            background: $blue-navy;
+            padding: 25px;
+        }
+    }
+    
+    .views-field-title
+    {
+        font-size: 2.5em;
+        text-decoration: underline;
+        text-transform: uppercase;
+        font-weight: bold;
+        margin-bottom: 5px;
+    }
+    
+    .views-field-nothing-1
+    {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: 1;
+        
+        & > div
+        {
+            width: 100%;
+            height: 100%;
+            max-width: 940px;
+            margin: 0 auto;
+            position: relative;
+        }
+        
+        .grower
+        {
+            background: $blue-light;
+            border-radius: 5000px;
+            width: 0;
+            height: 0;
+            position: absolute;
+            left: 125px;
+            top: 50%;
+            margin-top: 0;
+            margin-left: 0;
+            transition: all 1s ease-in-out;
+        }
+    }
+}
+
+.view-photo-circles
+{
+    position: relative;
+    
+    .views-row
+    {
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        border-radius: 75px;
+        background: $blue-light;
+        overflow: hidden;
+        
+        & > div
+        {
+            border-radius: 75px;
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+        }
+    }
+    
+    .views-field-field-image img
+    {
+        border-radius: 75px;
+        opacity: 0;
+        transition: opacity 0.3s;
+        
+        &:hover
+        {
+            opacity: 1;
+        }
     }
 }
