--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -281,6 +281,71 @@
     }
 }
 
+.view-programs-content
+{
+    .views-row
+    {
+        display: none;
+        position: absolute;
+        top: 60px;
+        left: 40px;
+        right: 40px;
+        background: $blue-light;
+        padding: 20px;
+        z-index: 10;
+        
+        &::before
+        {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 20px;
+            left: 269px;
+            width: 0px;
+            height: 0px;
+            border-style: solid;
+            border-width: 56px 56px 56px 0;
+            border-color: transparent $blue-navy transparent transparent;
+        }
+    }
+    
+    .views-field-title
+    {
+        float: left;
+        width: 200px;
+        margin-right: 80px;
+        text-align: center;
+        
+        h2
+        {
+            text-transform: uppercase;
+            line-height: 85%;
+            padding-bottom: 5px;
+            border-bottom: 4px solid white;
+            font-size: 2.5em;
+        }
+    }
+    
+    .views-field-body
+    {
+        background: $blue-navy;
+        padding: 15px;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .close
+    {
+        position: absolute;
+        right: -15px;
+        top: -15px;
+        width: 30px;
+        height: 30px;
+        background: url(../img/btn-close.png) no-repeat;
+        text-decoration: none;
+    }
+}
+
 .view-news,
 .view-news-page,
 .view-events,
@@ -739,7 +804,7 @@
         opacity: 0;
         position: relative;
         left: -50px;
-        z-index: 2;
+        z-index: 3;
         transition: opacity 0.3s, left 0.5s;
         
         &::after
@@ -771,7 +836,7 @@
         text-decoration: underline;
         text-transform: uppercase;
         font-weight: bold;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
     }
     
     .views-field-nothing-1
@@ -782,7 +847,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        z-index: 1;
+        z-index: 2;
         
         & > div
         {
@@ -807,6 +872,26 @@
             transition: all 1s ease-in-out;
         }
     }
+    
+    .views-field-path
+    {
+        padding-top: 0.75em;
+    }
+    
+    a.read-more
+    {
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        padding-right: 18px;
+        background: url(../img/chevron-right.png) no-repeat right center;
+        
+        &:hover
+        {
+            text-decoration: underline;
+        }
+    }
 }
 
 .view-photo-circles
@@ -821,6 +906,7 @@
         border-radius: 75px;
         background: $blue-light;
         overflow: hidden;
+        z-index: 1;
         
         & > div
         {
