Improve the falling balls effect and more style for programs page

--- a/sites/all/themes/rebound/sass/_header.scss
+++ b/sites/all/themes/rebound/sass/_header.scss
@@ -3,6 +3,8 @@
     @extend .fixed-width;
     height: 99px;
     background: #71c4ea;
+    position: relative;
+    z-index: 100;
     
     .region-navigation
     {
