Use the right colour for the alternate rows in staff page

--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -1235,7 +1235,7 @@
         
         &.views-row-even
         {
-            background: $blue-light;
+            background: $blue-very-light;
         }
         
         &:hover
