Fix contextual links breaking layout on front page

--- a/sites/all/themes/rebound/sass/_front.scss
+++ b/sites/all/themes/rebound/sass/_front.scss
@@ -60,6 +60,11 @@ body.front
             }
         }
     }
+    
+    .main-wrapper .block-views
+    {
+        position: static;
+    }
 }
 
 .region-content .circle
