--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -311,6 +311,8 @@
         width: 100%;
         height: 100%;
         z-index: 2;
+        text-decoration: none;
+        font-size: 0;
     }
 }
 
